--- a/skill_buildng_1/css/main.css
+++ b/skill_buildng_1/css/main.css
@@ -6,13 +6,17 @@
 
 */
 
+/*---------------------------------------------------
+--------------------- MAIN CSS ----------------------
+---------------------------------------------------*/
+
 body {
     
 }
 
 #wrapper {
-    width: 1200px;
-    margin: 0 auto;
+    width: 300px;
+    margin: 0 auto; 
 }
 
 header {
@@ -29,4 +33,89 @@ section {
 
 footer {
     
+}
+
+/*-------------------- ACCORDIAN CSS ---------------------*/
+
+.ui-accordion {
+    
+}
+
+.ui-accordion .ui-accordion-header {
+}
+
+.ui-accordion .ui-accordion-content {
+}
+
+.ui-accordion-header {
+
+}
+
+.ui-accordion-header:hover {
+ 
+}
+
+.ui-accordion-header:active {
+    
+}
+
+.ui-accordion-content {
+	
+}
+
+.ui-accordion-content-active {
+		
+}
+
+/*------------------------ teamSection CSS --------------------------------*/
+/*------------------------ purposeSection CSS --------------------------------*/
+/*------------------------ strengthsSection CSS --------------------------------*/
+/*------------------------ meetingSection CSS --------------------------------*/
+/*------------------------ communicationSection CSS --------------------------------*/
+/*------------------------ decisionSection CSS --------------------------------*/
+/*------------------------ expectationsSection CSS --------------------------------*/
+/*------------------------ assementSection --------------------------------*/
+
+/*-------------------------------------------------------------------------------
+-----------------------------SMALL MOBILE CSS------------------------------------
+-------------------------------------------------------------------------------*/
+@media only screen and (min-width: 400px) and (max-width: 599px) {
+	#wrapper {
+        max-width: 400px;
+        width: 100%;
+        margin: 0 auto;
+    }
+}
+
+/*-------------------------------------------------------------------------------
+-----------------------------LARGE MOBILE CSS------------------------------------
+-------------------------------------------------------------------------------*/
+@media only screen and (min-width: 600px) and (max-width: 960px) {
+	#wrapper {
+        max-width: 600px;
+        width: 100%;
+        margin: 0 auto;
+    }
+}
+
+/*-----------------------------------------------------------------------
+-----------------------------TABLET CSS----------------------------------
+-------------------------------------------------------------------------*/
+@media only screen and (min-width: 960px) and (max-width: 1280px) {
+    #wrapper {
+        max-width: 960px;
+        width: 100%;
+        margin: 0 auto;
+    }
+}
+
+/*------------------------------------------------------------------------
+------------------------------DESKTOP CSS---------------------------------
+-------------------------------------------------------------------------*/
+@media only screen and (min-width: 1280px) {
+    #wrapper {
+        max-width: 1200px;
+        width: 100%;
+        margin: 0 auto;
+    }
 }
